Refactor package.json and TypeScript configurations for improved module handling and build process

--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig-base.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "outDir": "./dist/esm",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "outDir": "./dist/cjs",
     "sourceMap": false,
     "declarationMap": false
   }
