--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "@hunter-ashmore/kysely-mssql",
-  "version": "0.1.0",
+  "name": "kysely-mssql",
+  "version": "0.1.3",
   "description": "Opinionated Kysely wrapper for MS SQL Server with observability, error handling, and utilities",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "type": "module",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/cjs/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "types": "./dist/cjs/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "default": "./dist/cjs/index.js"
     }
   },
   "files": [
@@ -18,7 +20,11 @@
   ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "build": "tsc",
+    "clean": "rm -rf dist",
+    "build": "pnpm clean && (pnpm build:esm & pnpm build:cjs) && pnpm script:module-fixup",
+    "build:esm": "tsc -p tsconfig.json",
+    "build:cjs": "tsc -p tsconfig-cjs.json",
+    "script:module-fixup": "node scripts/module-fixup.mjs",
     "typecheck": "tsc --noEmit",
     "test": "vitest --run",
     "test:watch": "vitest",
