Update CI and publish workflows to include linting and testing steps; modify package name in package.json

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,14 @@ jobs:
       - name: Check build artifacts
         run: |
           ls -la dist/
-          test -f dist/index.js
-          test -f dist/index.d.ts
+          ls -la dist/cjs/
+          ls -la dist/esm/
+          test -f dist/cjs/index.js
+          test -f dist/cjs/index.d.ts
+          test -f dist/cjs/package.json
+          test -f dist/esm/index.js
+          test -f dist/esm/index.d.ts
+          test -f dist/esm/package.json
 
   lint-and-format:
     name: Lint and Format Check
