--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,8 +31,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Lint
+        run: pnpm run lint
+
       - name: Type check
         run: pnpm run typecheck
+
+      - name: Run tests
+        run: pnpm run test
 
       - name: Build
         run: pnpm run build
@@ -51,5 +57,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `Published version ${version} to npm: https://www.npmjs.com/package/@hunter-ashmore/kysely-mssql/v/${version}`
+              body: `Published version ${version} to npm: https://www.npmjs.com/package/@dev-hla/kysely-mssql/v/${version}`
             });
