--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kysely-mssql",
+  "name": "@dev-hla/kysely-mssql",
   "version": "0.1.3",
   "description": "Opinionated Kysely wrapper for MS SQL Server with observability, error handling, and utilities",
   "main": "./dist/cjs/index.js",
