--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,19 +43,27 @@ jobs:
       - name: Build
         run: pnpm run build
 
+      - name: Verify package contents
+        run: |
+          echo "Package contents that will be published:"
+          pnpm pack --dry-run
+
       - name: Publish to npm
-        run: pnpm publish --access public --no-git-checks
+        run: pnpm publish --access public --no-git-checks --provenance
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Create GitHub Release Comment
+      - name: Add comment to GitHub Release
         uses: actions/github-script@v7
         with:
           script: |
-            const version = require('./package.json').version;
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
+            const fs = require('fs');
+            const packageJson = JSON.parse(fs.readFileSync('./package.json', 'utf8'));
+            const version = packageJson.version;
+
+            await github.rest.repos.createReleaseComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
+              release_id: context.payload.release.id,
               body: `Published version ${version} to npm: https://www.npmjs.com/package/@dev-hla/kysely-mssql/v/${version}`
             });
