Fix package content verification step to use npm instead of pnpm

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Verify package contents
         run: |
           echo "Package contents that will be published:"
-          pnpm pack --dry-run
+          npm pack --dry-run
 
       - name: Publish to npm
         run: pnpm publish --access public --no-git-checks --provenance
