--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Extract version from release tag
+        id: get_version
+        run: |
+          # Remove 'v' prefix from tag (e.g., v0.1.4 -> 0.1.4)
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Publishing version: $VERSION"
+
+      - name: Update package.json version
+        run: |
+          # Update version in package.json using node
+          node -e "const fs=require('fs'); const pkg=require('./package.json'); pkg.version='${{ steps.get_version.outputs.version }}'; fs.writeFileSync('./package.json', JSON.stringify(pkg, null, 2) + '\n');"
+          echo "Updated package.json to version ${{ steps.get_version.outputs.version }}"
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
